Header desktop version

--- a/#src/scss/style.scss
+++ b/#src/scss/style.scss
@@ -7,7 +7,8 @@
 		font-style: #{$style};
 	}
 }
-@import "fonts";
 
-body {
-}
+@import "fonts";
+@import "vars";
+@import "config";
+@import "header";
