--- a/#src/scss/header.scss
+++ b/#src/scss/header.scss
@@ -151,8 +151,8 @@
 	// .header__basket-image
 
 	&__basket-image {
-		max-width: 50px;
-		max-height: 50px;
+		max-width: 55px;
+		max-height: 55px;
 		width: 100%;
 	}
 
@@ -178,14 +178,22 @@
 	// .header__menu
 
 	&__menu {
+		position: relative;
+
+		align-self: stretch;
 		max-width: 215px;
 		width: 100%;
 		margin-left: 37px;
 
 		text-align: center;
+
 		// .header__menu--active
 
 		&--active {
+			display: flex;
+			align-items: center;
+
+			text-align: left;
 		}
 	}
 
@@ -201,7 +209,7 @@
 		font-size: 14px;
 		font-weight: 400;
 		text-transform: uppercase;
-		
+
 		background: #ff8635;
 		border-radius: 15px;
 		border: none;
@@ -213,7 +221,7 @@
 	&__menu-text {
 		display: inline-block;
 		margin-top: 5px;
-		
+
 		color: #828282;
 		font-size: 12px;
 		line-height: 14px;
@@ -224,16 +232,122 @@
 	// .header__menu-dropdown
 
 	&__menu-dropdown {
+		// .header__menu-dropdown::before
+
+		&::before {
+			content: "";
+			position: absolute;
+			bottom: calc(0px - 13px);
+			left: 0;
+			z-index: -10;
+
+			width: 50%;
+			height: 70px;
+
+			background-color: transparent;
+		}
+
+		// .header__menu-dropdown::after
+
+		&::after {
+			content: "";
+			position: absolute;
+			bottom: calc(0px - (13px + 9%));
+			left: 20px;
+			z-index: 9;
+
+			width: 55px;
+			height: 0px;
+
+			background-image: url(../img/icons/icons.svg#header-menu-triangle);
+			background-position: center;
+			background-repeat: no-repeat;
+			background-size: cover;
+
+			transition: 0.3s;
+		}
+
+		// .header__menu-dropdown:hover
+
+		&:hover {
+			// .header__menu-dropdown:hover .header__menu-title::before
+
+			.header__menu-title::before {
+				transform: translateY(-60%) rotateX(180deg);
+			}
+
+			// .header__menu-dropdown:hover .header__menu-list
+
+			.header__menu-list {
+				max-height: 400px;
+				padding: 5px 10px;
+				// overflow: visible;
+			}
+
+			// .header__menu-dropdown:hover::before
+
+			&::before {
+				z-index: 10;
+			}
+
+			// .header__menu-dropdown:hover::after
+
+			&::after {
+				height: 55px;
+			}
+		}
 	}
 
 	// .header__menu-title
 
 	&__menu-title {
+		position: relative;
+
+		padding-left: 20px;
+
+		cursor: pointer;
+
+		// .header__menu-title::before
+
+		&::before {
+			content: "";
+			position: absolute;
+			left: 0;
+			top: 50%;
+			transform: translateY(-50%);
+
+			width: 15px;
+			height: 8px;
+
+			background-image: url(../img/icons/icons.svg#t-arrow-down);
+			background-position: center;
+			background-repeat: no-repeat;
+			background-size: cover;
+
+			transition: 0.4s;
+		}
 	}
 
 	// .header__menu-list
 
 	&__menu-list {
+		position: absolute;
+		top: calc(100% + 13px);
+		left: 0;
+		z-index: 10;
+
+		width: 100%;
+		max-height: 0px;
+		margin: 0;
+		padding: 0 10px;
+		overflow: hidden;
+
+		background-color: #fff;
+		list-style: none;
+		box-shadow: -2px 1px 5px rgba(0, 0, 0, 0.05);
+
+		transition-property: max-height, padding;
+		transition-duration: 0.5s;
 	}
 
 	// .header__menu-item
@@ -248,15 +362,42 @@
 	// .header__menu-link
 
 	&__menu-link {
+		display: inline-block;
+		margin: 3px 0;
+
+		color: #000000;
+		font-size: 16px;
+		font-weight: 300;
+		border-bottom: 1px solid transparent;
+		text-decoration: none;
+
+		transition: border-bottom 0.35s;
+
+		// .header__menu-link:hover
+
+		&:hover {
+			border-color: #000;
+		}
 	}
 
 	// .header__menu-user
 
 	&__menu-user {
+		display: block;
+		width: 78px;
+		height: 78px;
+		margin-left: 30px;
+
+		overflow: hidden;
+
+		border-radius: 50%;
+		box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.15);
 	}
 
 	// .header__menu-avatar
 
 	&__menu-avatar {
+		width: 100%;
+		height: 100%;
 	}
 }
