Added product section

--- a/#src/scss/hero.scss
+++ b/#src/scss/hero.scss
@@ -233,6 +233,7 @@
 			background-color: #ffffff;
 			border: 1px solid #ffffff;
 			border-radius: 50%;
+			cursor: pointer;
 
 			transition: 0.3s;
 		}
