--- a/#src/scss/fonts.scss
+++ b/#src/scss/fonts.scss
@@ -4,3 +4,9 @@
 @include font("Roboto", "Roboto-Medium", "500", "normal");
 @include font("Roboto", "Roboto-Regular", "400", "normal");
 @include font("Roboto Condensed", "RobotoCondensed-BoldItalic", "700", "italic");
+
+@mixin roboto-condensed {
+	font-family: "Roboto Condensed", sans-serif;
+	font-style: italic;
+	font-weight: 700;
+}
