--- a/#src/scss/style.scss
+++ b/#src/scss/style.scss
@@ -13,4 +13,8 @@
 @import "config";
 @import "header";
 @import "hero";
+@import "card-product";
 @import "sales-leaders";
+@import "discount-slider";
+@import "discount";
+@import "home-publications.scss";
