Desktop main page full

--- a/#src/scss/discount-slider.scss
+++ b/#src/scss/discount-slider.scss
@@ -18,12 +18,18 @@
 		height: 70px;
 		padding: 0;
 
-		background-color: #84D776;
+		background-color: #84d776;
 		border: none;
 		border-radius: 50%;
 		cursor: pointer;
 
 		transition: 0.35s;
+
+		// .discount-slider .slick-arrow:hover
+
+		&:hover {
+			background-color: darken(#84d776, 5%);
+		}
 
 		// .discount-slider .slick-arrow::after
 
@@ -56,7 +62,7 @@
 		right: 0;
 
 		// .discount-slider .slick-next::after
-		
+
 		&::after {
 			transform: translate(-50%, -50%) rotate(180deg);
 		}
