--- a/#src/scss/style.scss
+++ b/#src/scss/style.scss
@@ -17,4 +17,5 @@
 @import "sales-leaders";
 @import "discount-slider";
 @import "discount";
-@import "home-publications.scss";
+@import "home-publications";
+@import "footer";
