--- a/#src/scss/home-publications.scss
+++ b/#src/scss/home-publications.scss
@@ -32,7 +32,6 @@
 
 	&__image-wrapper {
 		flex-shrink: 0;
-
 		max-width: 340px;
 		width: 100%;
 		margin-right: 30px;
@@ -54,6 +53,7 @@
 	&__info {
 		display: flex;
 		flex-direction: column;
+		width: 100%;
 		padding-bottom: 10px;
 	}
 
